added button, a new reporting  endpoint, and rbac resource for downloading submission permit data
